test/src/e2e_vm_tests/test_programs/should_pass/dump_impls_enum/src/foo.sw
library;

trait MyTraitFoo { }

impl MyTraitFoo for dump_impls_common::MyEnum {}
